DigicielFull/force-app/main/default/objects/gnx__Tax_receipt__c/fields/gnx__Cancellation_reason__c.field-meta.xml
<CustomField>
    <fullName>gnx__Cancellation_reason__c</fullName>
    <label>Raison d&apos;annulation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>