DigicielFull/force-app/main/default/objects/gnx__Tax_receipt__c/fields/gnx__Context_id__c.field-meta.xml
<CustomField>
    <fullName>gnx__Context_id__c</fullName>
    <label>Id du contexte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>