DigicielFull/force-app/main/default/objects/gnx__Tax_receipt__c/fields/gnx__Context_object_API_name__c.field-meta.xml
<CustomField>
    <fullName>gnx__Context_object_API_name__c</fullName>
    <inlineHelpText>Nom API de l&apos;objet à partir duquel les informations ont été récupérés pour créer le reçu fiscal</inlineHelpText>
    <label>Objet du contexte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>