DigicielFull/force-app/main/default/objects/gnx__Tax_receipt__c/fields/gnx__Donor_city__c.field-meta.xml
<CustomField>
    <fullName>gnx__Donor_city__c</fullName>
    <label>Ville du donateur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>