DigicielFull/force-app/main/default/objects/gnx__Tax_receipt__c/fields/gnx__Donor_last_name__c.field-meta.xml
<CustomField>
    <fullName>gnx__Donor_last_name__c</fullName>
    <label>Nom du donateur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>