DigicielFull/force-app/main/default/objects/gnx__Tax_receipt__c/fields/gnx__Donor_postal_code__c.field-meta.xml
<CustomField>
    <fullName>gnx__Donor_postal_code__c</fullName>
    <label>Code postal du donateur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>