DigicielFull/force-app/main/default/objects/gnx__Tax_receipt__c/fields/gnx__Error_message__c.field-meta.xml
<CustomField>
    <fullName>gnx__Error_message__c</fullName>
    <label>Message d&apos;erreur</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>