DigicielFull/force-app/main/default/objects/gnx__Tax_receipt__c/fields/gnx__External_id__c.field-meta.xml
<CustomField>
    <fullName>gnx__External_id__c</fullName>
    <externalId>true</externalId>
    <label>Id Externe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>