DigicielFull/force-app/main/default/objects/gnx__Tax_receipt__c/fields/gnx__Issued_by__c.field-meta.xml
<CustomField>
    <fullName>gnx__Issued_by__c</fullName>
    <inlineHelpText>Id de l&apos;utilisateur qui a émis le reçu fiscal</inlineHelpText>
    <label>Emis part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>