DigicielFull/force-app/main/default/objects/gnx__Tax_receipt__c/fields/gnx__Legal_entity_configuration__c.field-meta.xml
<CustomField>
    <fullName>gnx__Legal_entity_configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration d&apos;entité légale</label>
    <referenceTo>gnx__Legal_entity_configuration__c</referenceTo>
    <relationshipLabel>Reçus Fiscaux</relationshipLabel>
    <relationshipName>Tax_receipt</relationshipName>
    <type>Lookup</type>
</CustomField>