DigicielFull/force-app/main/default/objects/gnx__Tax_receipt__c/fields/gnx__Tax_receipt_number__c.field-meta.xml
<CustomField>
    <fullName>gnx__Tax_receipt_number__c</fullName>
    <inlineHelpText>Généré automatiquement lors du passage au statut validé</inlineHelpText>
    <label>Numéro de reçu fiscal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>