DigicielFull/force-app/main/default/objects/gnx__Tax_receipt__c/listViews/gnx__All.listView-meta.xml
<ListView>
    <fullName>gnx__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>